<resources>
    <string name="app_name">JelajahI</string>
    <string name="home">Home</string>
    <string name="menu_home">Home Menu</string>
    <string name="explore">Explore</string>
    <string name="menu_explore">Explore Menu</string>
    <string name="camera">Camera</string>
    <string name="menu_camera">Camera Menu</string>
    <string name="jelajahi_community">JelajahI Community</string>
    <string name="add_community">Add #Penjelajah Story</string>
    <string name="forum">Forum</string>
    <string name="menu_forum">Forum Menu</string>
    <string name="favorite">Favorite</string>
    <string name="menu_favorite">Favorite Menu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="current_pasword">Current Password</string>
    <string name="name">Name</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="signup">Sign Up</string>
    <string name="dismiss">Dismiss</string>
    <string name="getting_started">Begin Your Exploration</string>
    <string name="account_continue">Create an account to continue!</string>
    <string name="lets_something">Let The Exploration Begin</string>
    <string name="change_password">Change Password</string>
    <string name="home_text">Find Cultural Travel Destination with Us!</string>
    <string name="good_to">Good to see you again, Penjelajah!</string>
    <string name="or">OR</string>
    <string name="description">Description</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="loading_in_google">Loading Sign in with Google</string>
    <string name="sign_up_google">Sign up with Google</string>
    <string name="loading_up_google">Loading Sign up with Google</string>
    <string name="confirm_password">Confirmation Password</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="post">Post</string>
    <string name="gallery">Gallery</string>
    <string name="permission_yes">Permission request granted</string>
    <string name="permission_no">Permission request denied</string>
    <string name="add_image">Please add the image, there is no image</string>
    <string name="photo">Photo</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="route">Route</string>
    <string name="travel_references">Have you got any travel references?</string>
    <string name="capture_your">Capture your Indonesian cultural moments now, and let us suggest destinations personalized for you!</string>
    <string name="capture_image">Capture Image</string>
    <string name="failed_capture_image">Capture Image</string>
    <string name="cultural">Cultural Encyclopedia</string>
    <string name="see_all">See All</string>
    <string name="popular">Popular Destinations</string>
    <string name="community_stories">Community Stories</string>
    <string name="failed_camera">Failed Open Camera</string>
    <string name="take_picture">Take a Picture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="account_created">Account Created</string>
    <string name="re_login">Please Login Again with New Password</string>
    <string name="register">Register</string>
    <string name="destination_recommendation">Destination Recommendations</string>
    <string name="liked">Destination You Liked</string>
    <string name="explorer_indonesian">Explore Indonesian Cultural Heritages</string>
    <string name="discover_indonesiaan">Discover Indonesian Cultural Destinations</string>
    <string name="share_connect">Share and Connect with Fellow #Penjelajah!</string>
    <string name="clear">clear</string>
    <string name="search_location">Search Location</string>
    <string name="back">Back</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="remove_favorite">Remove to Favorite</string>
    <string name="user_total_ratings">(%1$s)</string>
    <string name="culture_identification">Culture Identification</string>
    <string name="capture_get">Get Cultural Travel Recommendation</string>



</resources>